2014-09-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/63247
	* omp-low.c (lower_omp_target): For OMP_CLAUSE_MAP_POINTER
	of ARRAY_TYPE, if not OMP_CLAUSE_MAP_ZERO_BIAS_ARRAY_SECTION
	use the alignment of avar rather than ovar.

2014-09-28  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_output_function_epilogue): Only update
	last_address when a nonnote insn is found.

2014-09-26  Jan Hubicka  <hubicka@ucw.cz>	
	
	PR ipa/60665
	* ipa-devirt.c (possible_polymorphic_call_targets): Silence clang warning.

2014-09-26  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/62121
	* ipa-polymorphic-call.c (ipa_polymorphic_call_context::restrict_to_inner_class):
	fix pasto in checking array size.

2014-09-26  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/35545
	* passes.def (pass_tracer): Move before last dominator pass.

2014-09-26  Thomas Schwinge  <thomas@codesourcery.com>

	* gcc.c (try_generate_repro): Remove argument "prog".  Change all
	users.
	(run_attempt): Handle errors of "pex_run" invocation.

2014-09-26  Christophe Lyon  <christophe.lyon@linaro.org>

	* config/aarch64/aarch64-linux.h (ASAN_CC1_SPEC): Define.
        (CC1_SPEC): Define.
        * config/aarch64/aarch64.c (aarch64_asan_shadow_offset): New function.
        (TARGET_ASAN_SHADOW_OFFSET): Define.

2014-09-26  Martin Liska  <mliska@suse.cz>

	* cgraph.c (cgraph_node::release_body): New argument keep_arguments
	introduced.
	* cgraph.h: Likewise.
	* cgraphunit.c (cgraph_node::create_wrapper): Usage of new argument introduced.
	* ipa-utils.h (polymorphic_type_binfo_p): Safe check for binfos created by Java.
	* tree-ssa-alias.c (ao_ref_base_alias_set): Static function transformed to global.
	* tree-ssa-alias.h: Likewise.

2014-09-26  Jakub Jelinek  <jakub@redhat.com>
	    Max Ostapenko  <m.ostapenko@partner.samsung.com>

	* common.opt: New option.
	* doc/invoke.texi: Describe new option.
	* gcc.c (execute): Don't free first string early, but at the end